# ecc

./: .gitignore  Cargo.toml
ecc_py/: Cargo.toml
ecc_py/src/: lib.rs
evolutio/: Cargo.toml
evolutio/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
py/: soft_wta_U_equals_abs_sk_minus_sj_expectation_given_sk_gt_sj.py  soft_wta_U_equals_l1_norm_of_s_expectation.py  soft_wta_U_equals_sk_minus_sj_expectation.py  soft_wta_U_equals_sk_minus_sj_expectation_given_sk_gt_sj.py  soft_wta_U_equals_sk_sj_expectation_given_sk_gt_sj.py  soft_wta_V_equals_1.py
py/accuracy_benchmarks/: soft_wta_U_equals_sk_minus_sj_expectation.py
py/convergence_tests/: argmax_entropy_maximisation_as_s_plus_a_.py  common.py  convergence_test.py  convergence_test_greyscale.py  convergence_test_mnist.py  hard_wta_l1.py  hard_wta_l2.py  single_layer.py  soft_wta_U_equals_abs_sk_minus_sj_expectation_given_sk_gt_sj.py  stdp.py  (+5 more)
render/: Cargo.toml
render/src/: buffer.rs  buffer_type.rs  command_pool.rs  compute.rs  constants.rs  data.rs  descriptor_binding.rs  descriptor_layout.rs  descriptor_pool.rs  descriptors.rs  device.rs  fence.rs  fps.rs  framebuffer.rs  frames_in_flight.rs  host_buffer.rs  imageview.rs  input.rs  instance.rs  lib.rs  owned_buffer.rs  pipeline.rs  platforms.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs  single_render_pass.rs  specialization_constants.rs  stage_buffer.rs  subbuffer.rs  submitter.rs  surface.rs  swap_chain.rs  texture.rs  uniform_types.rs  validation_layer.rs  vector.rs  vulkan_context.rs
shadertoy/: Cargo.toml
vf/: Cargo.toml
(+133 files in other folders)
