[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0+1.3.209"
vk-shader-macros = "0.2.8"
winit = "0.27.4"
raw-window-handle = "0.5.0"
ash-window = "0.12.0"
failure = "0.1.8"
nalgebra-glm = "0.14.0"
memoffset = "0.6.4"
image = "0.23.14"
rand = "0.8.4"
rand_distr = "0.4.1"
num-traits = "0.2.14"
shaderc = "0.7.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

